<resources>
    <string name="app_name">Dogs app</string>
    <string name="dogs">DOGS</string>
    <string name="username">Username</string>
    <string name="login">LogIn</string>
    <string name="logout">Logout</string>
    <string name="userlogged">false</string>
    <string name="btn_load_more">Load more images</string>
    <string name="mypics">My pics</string>
    <string name="addnewpic">Add a new pic</string>
    <string name="back">Back</string>
    <string name="sharetype">Share type</string>
    <string name="dogtype">Type of the dog</string>
    <string name="url">URL</string>
    <string name="sharepic">Share pic</string>
    <string name="remove">Remove</string>
    <string name="btncreatepic">Make a new pic</string>
    <string name="save">Save</string>
</resources>